--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <title>Ginna Ghee - Premium Browned Ghee | Richness You Can Taste</title>
-    <meta name="description" content="Discover Ginna Ghee's premium browned ghee, crafted with traditional methods for exceptional richness and nutty flavor. Made from grass-fed butter with high smoke point perfect for cooking. Shop our artisanal ghee collection today.">
+    <meta name="description" content="Discover Ginna Ghee's premium browned ghee, crafted with traditional methods for exceptional richness and nutty flavor. Made from butter with a high smoke point, perfect for cooking. Shop our artisanal ghee collection. You can find us on Social Media (@ginnaghee).">
     <meta property="og:title" content="Ginna Ghee - Premium Browned Ghee">
     <meta property="og:description" content="Experience the authentic flavor of premium browned ghee, crafted with traditional methods to bring you the richest, nuttiest taste.">
     <meta property="og:type" content="website">
